# watermelon-engine

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: default.frag  default.vert  sinewave.frag
assets/shaders/shapes/: circle.frag  shape.frag  shape.vert
assets/sprites/: Exit.json
testgame/: CMakeLists.txt  main.cpp
watermelon_engine/: CMakeLists.txt  core.cpp  core.hpp  engine_types.hpp  gfx.cpp  gfx.hpp  input.cpp  input.hpp  physics.cpp  physics.hpp  sequence.cpp  sequence.hpp  utils.cpp  utils.hpp  world.cpp  world.hpp
watermelon_engine/vendors/glad/include/glad/: gl.h
